# python_rf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/raw/adult/: SHA256SUMS.txt
src/data/: build_dataset.py  eda.py  features.py  io.py  load_uci.py
src/model/: random_forest_details.md  rf.py
src/models/: rf.py
src/utils/: custom_context_menager.py  custom_decorators.py
tests/: test_random_forest.py  test_rf_with_processed_data.py
