[project]
name = "python_rf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pre-commit>=4.5.0",
    "ruff[format]>=0.14.7",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]